<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="it.mspc.vaccinedata.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="it.mspc.vaccinedata.ui.vaccini.VacciniFragment"
        android:label="@string/menu_vaccini"
        tools:layout="@layout/fragment_vaccini" />

    <fragment
        android:id="@+id/nav_delivery"
        android:name="it.mspc.vaccinedata.ui.delivery.DeliveryFragment"
        android:label="@string/menu_delivery"
        tools:layout="@layout/fragment_delivery" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="it.mspc.vaccinedata.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_appuntamento"
        android:name="it.mspc.vaccinedata.ui.appuntamento.AppuntamentoFragment"
        android:label="@string/menu_appuntamento"
        tools:layout="@layout/fragment_list" />
</navigation>